testdata/bad/undefined-default-slotif/index.tw
<p>@component('user')@slotif(true)TEST@end</p>